# MyVST3Plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WORKFLOW.md  build_final.bat  build_simple.bat  build_temp.bat  compile_final.bat  compile_now.bat  compile_only.bat  final_build.bat  fix_reaper_plugin.ps1  install_vst3.ps1  install_vst3_local.ps1  push_to_github.bat  quick_build.bat  test_detune.ps1  test_reaper_detune.ps1  test_reaper_setup.ps1
MyVST3Plugin/Release_v1.0/: GET_RELEASE.bat  INSTALL.txt  README_RELEASE.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Stable_v1.0/VST3/MyVST3Plugin.vst3/Contents/Resources/: moduleinfo.json
